--- a/src/Subir Manualidades.html
+++ b/src/Subir Manualidades.html
@@ -63,35 +63,34 @@
     <!-- Contenido del cuerpo aquí -->
     <div class="container p-4 mt-5">
         <div class="row">
-            <form id="Formulario-Organizacion" class="col-md-6 mx-auto">
+            <form id="Formulario-Paciente" class="col-md-6 mx-auto">
                 <div class="mb-3">
-                    <label for="Nombre-Organizacion" class="form-label">Nombre de la Organización:</label>
-                    <input type="text" class="form-control" id="Nombre-Organizacion"
-                        placeholder="Nombre de la Organización">
+                    <label for="Nombre-Paciente" class="form-label">Nombre del Paciente:</label>
+                    <input type="text" class="form-control" id="Nombre-Paciente" placeholder="Nombre del Paciente">
                 </div>
                 <div class="mb-3">
-                    <label for="Integrantes-Organizacion" class="form-label">Número de Integrantes:</label>
-                    <input type="number" class="form-control" id="Integrantes-Organizacion"
-                        placeholder="Número de Integrantes">
+                    <label for="Edad-Paciente" class="form-label">Edad del Paciente:</label>
+                    <input type="number" class="form-control" id="Edad-Paciente" placeholder="Edad del Paciente">
                 </div>
                 <div class="mb-3">
-                    <label for="Lider-Organizacion" class="form-label">Líder de la Organización:</label>
-                    <input type="text" class="form-control" id="Lider-Organizacion"
-                        placeholder="Líder de la Organización">
+                    <label for="Enfermedad-Paciente" class="form-label">Enfermedad:</label>
+                    <input type="text" class="form-control" id="Enfermedad-Paciente"
+                        placeholder="Enfermedad del Paciente">
                 </div>
                 <div class="mb-3">
-                    <label for="NumeroAliados-Organizacion" class="form-label">Número de Aliados:</label>
-                    <input type="number" class="form-control" id="NumeroAliados-Organizacion"
-                        placeholder="Número de Aliados">
+                    <label for="DoctorACargo-Paciente" class="form-label">Doctor a Cargo:</label>
+                    <input type="text" class="form-control" id="DoctorACargo-Paciente"
+                        placeholder="Doctor a Cargo del Paciente">
                 </div>
                 <div class="mb-3">
-                    <label for="Fecha-Contratacion-Organizacion" class="form-label">Fecha de Contratación:</label>
-                    <input type="date" class="form-control" id="Fecha-Contratacion-Organizacion">
+                    <label for="FechaIngreso-Paciente" class="form-label">Fecha de Ingreso:</label>
+                    <input type="date" class="form-control" id="FechaIngreso-Paciente">
                 </div>
-                <button type="submit" class="btn btn-primary" id="Guardar-Organizacion">Guardar Organización</button>
+                <button type="submit" class="btn btn-primary" id="Guardar-Paciente">Guardar Paciente</button>
             </form>
         </div>
     </div>
+
 
     <!-- MODAL DE INICIO DE SESION -->
     <div class="modal fade" id="InicioSesion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
