--- a/src/SubirPacientes.html
+++ b/src/SubirPacientes.html
@@ -8,12 +8,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Enlaza al archivo de estilos de Toastify -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+    <!-- CSS PERSONALIZADO -->
     <link rel="stylesheet" href="style.css">
-    <script type="module" src="./main.js"></script>
-    <title>CLINICA DE PACIENTES</title>
+    <!-- El modulo Main contiene lo necesario para que el programa funcione -->
+    <script type="module" src="./mainManualidad.js"></script>
+    <title>Manualidades UTN</title>
 </head>
 
 <body>
+
     <!-- Navbar con tema oscuro -->
     <nav class="fixed-top">
         <div>
@@ -49,63 +52,50 @@
             </div>
         </div>
     </nav>
+
     <!-- Contenido del cuerpo aquí -->
 
-    <!-- Lista de Pacientes -->
-    <div class="custom-container">
+    <!-- Formulario de Registro de Pacientes -->
+
+    <div id="manualidad-form-container" class="custom-container">
         <div class="custom-row">
-            <div class="custom-col">
-                <ul class="custom-list-group Pacientes"></ul>
-            </div>
+            <form id="Formulario-Paciente" class="custom-col">
+                <div class="contenedor-datos">
+                    <label for="Nombre-Paciente" class="custom-form-label">Nombre del
+                        Paciente:</label>
+                    <input type="text" class="custom-form-control" id="Nombre-Paciente"
+                        placeholder="Nombre del Paciente">
+                </div>
+                <div class="contenedor-datos">
+                    <label for="Edad-Paciente" class="custom-form-label">Edad del Paciente:</label>
+                    <input type="number" class="custom-form-control" id="Edad-Paciente" placeholder="Edad del Paciente">
+                </div>
+                <div class="contenedor-datos">
+                    <label for="Enfermedad-Paciente" class="custom-form-label">Enfermedad:</label>
+                    <input type="text" class="custom-form-control" id="Enfermedad-Paciente"
+                        placeholder="Enfermedad del Paciente">
+                </div>
+                <div class="contenedor-datos">
+                    <label for="DoctorACargo-Paciente" class="custom-form-label">Doctor a
+                        Cargo:</label>
+                    <input type="text" class="custom-form-control" id="DoctorACargo-Paciente"
+                        placeholder="Doctor a Cargo del Paciente">
+                </div>
+                <div class="contenedor-datos">
+                    <label for="FechaIngreso-Paciente" class="custom-form-label">Fecha de
+                        Ingreso:</label>
+                    <input type="date" class="custom-form-control" id="FechaIngreso-Paciente">
+                </div>
+                <button type="submit" class="btn btn-primary" id="Guardar-Paciente">Guardar Paciente</button>
+            </form>
         </div>
     </div>
 
-    <!-- MODAL DE ACTUALIZACIÓN -->
-    <div class="modal fade" id="ActualizarPaciente" tabindex="-1" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content bg-dark text-light">
-                <div class="modal-header bg-dark">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">Actualizar Paciente</h1>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <form id="Formulario-ActualizarPaciente">
-                        <div class="mb-3">
-                            <label for="Actualizar-Nombre">Nombre del Paciente</label>
-                            <input type="text" id="Actualizar-Nombre" class="form-control mb-3"
-                                placeholder="Ingresa el nuevo nombre">
-                        </div>
-                        <div class="mb-3">
-                            <label for="Actualizar-Edad">Edad</label>
-                            <input type="number" id="Actualizar-Edad" class="form-control mb-3"
-                                placeholder="Ingresa la nueva edad">
-                        </div>
-                        <div class="mb-3">
-                            <label for="Actualizar-Enfermedad">Enfermedad</label>
-                            <input type="text" id="Actualizar-Enfermedad" class="form-control mb-3"
-                                placeholder="Ingresa la nueva enfermedad">
-                        </div>
-                        <div class="mb-3">
-                            <label for="Actualizar-DoctorACargo">Doctor a Cargo</label>
-                            <input type="text" id="Actualizar-DoctorACargo" class="form-control mb-3"
-                                placeholder="Ingresa el nuevo doctor a cargo">
-                        </div>
-                        <div class="mb-3">
-                            <label for="Actualizar-FechaIngreso">Fecha de Ingreso</label>
-                            <input type="date" id="Actualizar-FechaIngreso" class="form-control mb-3">
-                        </div>
-                        <button class="btn btn-primary w-100 mb-2 edit Boton-ActualizarPaciente">Actualizar</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </div>
 
     <!-- MODAL DE INICIO DE SESION -->
     <div class="modal fade" id="InicioSesion" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content bg-light text-dark"> <!-- Cambiado a fondo claro y texto oscuro -->
+            <div class="modal-content bg-dark">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">INICIAR SESIÓN</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -122,13 +112,12 @@
                         </label>
                         <input type="password" id="InicioSesion-Password" class="form-control mb-3"
                             placeholder="Ingresa tu contraseña" required>
-                        <button type="submit" class="btn btn-outline-dark w-100 mb-2">INICIAR SESIÓN</button>
-                        <!-- Cambiado a botón oscuro -->
+                        <button type="submit" class="btn btn-outline-light w-100 mb-2">INICIAR SESIÓN</button>
                     </form>
                     <button type="submit" id="Google-Auth" class="btn btn-outline-warning w-100 mb-2">INICIAR SESIÓN CON
                         GOOGLE</button>
                     <button type="submit" id="Facebook-Auth" class="btn btn-outline-info w-100 mb-2">INICIAR SESIÓN CON
-                        GITHUB</button>
+                        FACEBOOK</button>
                 </div>
             </div>
         </div>
@@ -137,7 +126,7 @@
     <!-- MODAL DE REGISTRO -->
     <div class="modal fade" id="Registrarse" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
-            <div class="modal-content bg-light text-dark"> <!-- Cambiado a fondo claro y texto oscuro -->
+            <div class="modal-content bg-dark">
                 <div class="modal-header">
                     <h1 class="modal-title fs-5" id="exampleModalLabel">REGISTRATE</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -154,8 +143,7 @@
                         </label>
                         <input type="password" id="Registrarse-Password" class="form-control mb-3"
                             placeholder="Ingresa tu contraseña" required>
-                        <button type="submit" class="btn btn-outline-dark w-100 mb-4">REGISTRARSE</button>
-                        <!-- Cambiado a botón oscuro -->
+                        <button type="submit" class="btn btn-outline-light w-100 mb-4">REGISTRARSE</button>
                     </form>
                 </div>
             </div>
